--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   function search() {
     var searchText = document.getElementById("searchInput").value;
     if (searchText.trim() !== "") {
-      var searchUrl = "https://www.example.com/search?q=" + encodeURIComponent(searchText);
+      var searchUrl = "https://costin89.github.io/linearLearning/" + encodeURIComponent(searchText);
       window.open(searchUrl, "_blank");
     }
   }
