--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-color: #344964;
+      background-color: rgb(52,73, 100);
     }
     #container {
       text-align: center;
