--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     input[type="submit"] {
       padding: 8px 16px;
       cursor: pointer;
+      background-color: rgb(0, 150, 213);
     }
   </style>
 </head>
@@ -31,8 +32,8 @@
 <div id="container">
   <h1>Suche</h1>
   <form id="searchForm" onsubmit="return false;">
-    <input type="text" id="searchInput" placeholder="Suche eingeben">
-    <input type="submit" value="Suchen" onclick="search()">
+    <input type="text" id="searchInput" placeholder="Session ID eingeben">
+    <input type="submit" value="Search" onclick="search()">
   </form>
 </div>
 
