--- a/index.html
+++ b/index.html
@@ -12,18 +12,33 @@
       height: 100vh;
       margin: 0;
       background-color: rgb(52,73, 100);
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     }
     #container {
       text-align: center;
     }
     input[type="text"] {
-      padding: 8px;
+      padding: 12px;
       margin-right: 8px;
+      border-radius: 8px;
+      border: 1px solid rgba(0,0,0,0.2);
+      background-color: rgba(255, 255, 255, 0.8);
+      outline: none;
+      font-size: 16px;
+      width: 200px;
     }
     input[type="submit"] {
-      padding: 8px 16px;
+      padding: 12px 16px;
       cursor: pointer;
       background-color: rgb(0, 150, 213);
+      border: none;
+      border-radius: 8px;
+      color: #fff;
+      font-size: 16px;
+      transition: background-color 0.3s ease;
+    }
+    input[type="submit"]:hover {
+      background-color: rgb(0, 120, 170);
     }
   </style>
 </head>
@@ -33,7 +48,7 @@
   <h1>Suche</h1>
   <form id="searchForm" onsubmit="return false;">
     <input type="text" id="searchInput" placeholder="Session ID eingeben">
-    <input type="submit" value="Search" onclick="search()">
+    <input type="submit" value="Connect" onclick="search()">
   </form>
 </div>
 
