--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
     <input type="text" id="searchInput" placeholder="Session ID eingeben">
     <input type="submit" value="Connect" onclick="search()">
   </form>
+  <footer>
+    Created by Marcella Haller & Alexander Ast 2024 - Technische Universität Darmstadt -  
+</footer>
 </div>
+  
 
 <script>
   function search() {
