--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   function search() {
     var searchText = document.getElementById("searchInput").value;
     if (searchText.trim() !== "") {
-      var searchUrl = "https://costin89.github.io/linearLearning/" + encodeURIComponent(searchText);
+      var searchUrl = "https://costin89.github.io/Hephaistos/" + encodeURIComponent(searchText);
       window.open(searchUrl, "_blank");
     }
   }
