--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     input[type="submit"]:hover {
       background-color: rgb(0, 120, 170);
     }
+    footer {
+      font-size: 8px;
+    }
   </style>
 </head>
 <body>
@@ -50,9 +53,8 @@
     <input type="text" id="searchInput" placeholder="Session ID eingeben">
     <input type="submit" value="Connect" onclick="search()">
   </form>
-  <footer>
-    Created by Marcella Haller & Alexander Ast 2024 - Technische Universität Darmstadt -  
-</footer>
+  <br><br>
+  <footer> Created by Marcella Haller & Alexander Ast 2024 - Technische Universität Darmstadt -  </footer>
 </div>
   
 
